# vix-ai

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: 01_minimal.cpp  02_ml_minimal.cpp  CMakeLists.txt
examples/core/: 01_core_minimal.cpp  02_tensor_demo.cpp  03_device_parse.cpp  04_engine_info.cpp  CMakeLists.txt  smoke.cpp
examples/distributed/: 01_hello.cpp  CMakeLists.txt
examples/ml/: 02_regression_kmeans.cpp  CMakeLists.txt  test_ml.cpp
examples/nlp/: 01_tokenize.cpp  02_embed.cpp  03_summarize.cpp  CMakeLists.txt
examples/nn/: 01_summary.cpp  CMakeLists.txt
examples/vision/: 01_info.cpp  02_detect.cpp  03_track.cpp  CMakeLists.txt
vix-ai-cli/: CMakeLists.txt  README.md
vix-ai-cli/include/vix/ai/cli/: Commands.hpp  TrainerCLI.hpp
vix-ai-cli/src/: Commands.cpp  TrainerCLI.cpp
vix-ai-cli/tests/: CMakeLists.txt  cli_smoke_test.cpp
vix-ai-vision/: CMakeLists.txt
vix-ai-vision/include/vix/ai/vision/: Detector.hpp  Image.hpp  OCR.hpp  Tracker.hpp
vix-ai-vision/src/: Detector.cpp  Image.cpp  OCR.cpp  Tracker.cpp
vix-ai-vision/tests/: CMakeLists.txt  vision_smoke_test.cpp
